# QtAda

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h.cmake  install.sh  main.cpp  test.sh
client/: CMakeLists.txt
client/cli/: CMakeLists.txt  main.cpp
client/gui/: CMakeLists.txt  FileEditor.cpp  FileEditor.hpp  GuiExport.hpp  GuiTools.cpp  GuiTools.hpp  Highlighter.cpp  Highlighter.hpp  InitDialog.cpp  InitDialog.hpp  MainGui.cpp  MainGui.hpp  MainGui.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  QtAdaGui.cpp  QtAdaGui.hpp  QtAdaGui.ui  QtAdaMainWindow.cpp  QtAdaMainWindow.hpp  StartDialog.cpp  StartDialog.hpp
common/: CMakeLists.txt  Common.hpp  CommonData.hpp  CommonFunctions.cpp  CommonFunctions.hpp  GenerationSettings.cpp  GenerationSettings.hpp  Paths.hpp  Settings.cpp  Settings.hpp  SocketMessages.hpp
core/: CMakeLists.txt  ConfHandler.cpp  ConfHandler.hpp  CoreExport.hpp  GenerationSettings.cpp  GenerationSettings.hpp  GuiEventFilter.hpp  LastEvent.cpp  LastEvent.hpp  MetaObjectHandler.cpp  MetaObjectHandler.hpp  MetaTypeDeclarations.hpp  Probe.cpp  Probe.hpp  ProbeGuard.cpp  ProbeGuard.hpp  ProcessedObjects.hpp  QuickEventFilter.cpp  QuickEventFilter.hpp  ScreenshotManager.cpp  ScreenshotManager.hpp  ScriptRunner.cpp  ScriptRunner.hpp  ScriptWriter.cpp  ScriptWriter.hpp  TestAppLauncher.cpp  TestAppLauncher.hpp  UserEventFilter.cpp  UserEventFilter.hpp  UserVerificationFilter.cpp  UserVerificationFilter.hpp  WidgetEventFilter.cpp  WidgetEventFilter.hpp  WidgetEventFilters.cpp  WidgetEventFilters.hpp
core/gui/: ControlDialog.cpp  ControlDialog.hpp  GuiTools.hpp  PropertiesWatcher.cpp  PropertiesWatcher.hpp
core/utils/: Common.hpp  CommonFilterUtils.cpp  CommonFilterUtils.hpp  CommonFilters.cpp  CommonFilters.hpp  Execution.cpp  Execution.hpp  FilterUtils.cpp  FilterUtils.hpp  SocketMessages.hpp  Tools.cpp  Tools.hpp  WidgetFilterUtils.cpp  WidgetFilterUtils.hpp
data/: auto_record_reference_for_qt_widgets.js  error_js_syntax.js  verify_reference_for_qt_quick.js  verify_reference_for_qt_widgets.js
docker/: Dockerfile.ubuntu  internal_docker.sh  run_dockers.sh
examples/: CMakeLists.txt
examples/simple_qobject_example/: CMakeLists.txt  ExampleObject.hpp  main.cpp
examples/simple_qt_quick_example/: CMakeLists.txt  MyButton.qml  MyClickPage.qml  MyPage.qml  MyStyle.qml  MyTabButton.qml  MyTextInput.qml  MyTextPage.qml  MyTumbler.qml  MyViewPage.qml  QmlAutoRecord.cpp  QmlAutoRecord.hpp  main.cpp  main.qml  qml.qrc  qmldir
examples/simple_qt_widget_example/: CMakeLists.txt  customDelegate.h  dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
hooks/: CMakeLists.txt  Hooks.cpp
inprocess/: CMakeLists.txt  InprocessController.hpp  InprocessController.rep  InprocessDialog.cpp  InprocessDialog.hpp  InprocessExport.hpp  InprocessRunner.cpp  InprocessRunner.hpp  InprocessTools.cpp  InprocessTools.hpp  PropertiesWatcher.cpp  PropertiesWatcher.hpp  ScriptAPI.rep  ScriptWriter.cpp  ScriptWriter.hpp
launcher/: CMakeLists.txt  LaunchOptions.cpp  LaunchOptions.hpp  Launcher.cpp  Launcher.hpp  LauncherExport.hpp  LauncherLog.cpp  LauncherLog.hpp  LauncherUtils.cpp  LauncherUtils.hpp  ProbeABI.cpp  ProbeABI.hpp  ProbeDetector.cpp  ProbeDetector.hpp
launcher/cli/: CMakeLists.txt  main.cpp
launcher/core/: CMakeLists.txt  LaunchOptions.cpp  LaunchOptions.hpp  Launcher.cpp  Launcher.hpp  LauncherLog.cpp  LauncherLog.hpp  LauncherUtils.hpp  ProbeABI.cpp  ProbeDetector.cpp  ProbeDetector.hpp
launcher/core/injector/: AbstractInjector.cpp  AbstractInjector.hpp  PreloadInjector.cpp  PreloadInjector.hpp  ProcessInjector.cpp  ProcessInjector.hpp
launcher/injector/: AbstractInjector.cpp  AbstractInjector.hpp  PreloadInjector.cpp  PreloadInjector.hpp  ProcessInjector.cpp  ProcessInjector.hpp
probe/: CMakeLists.txt  Hooks.cpp  Hooks.hpp  HooksLauncher.cpp  Probe.cpp  ProbeInitializer.cpp  ProbeInitializer.hpp
project/: CMakeLists.txt  ConfBuilderDialog.ui.autosave  ProjectAPI.cpp  ProjectAPI.hpp  ProjectDialog.cpp  ProjectDialog.hpp  ProjectDialog.ui
resources/: icons.qrc  inprocess.qrc  main.qrc
resources/project/: project.qrc
tests/: auto_record_reference_for_qt_quick.js  auto_update_reference_for_qt_quick.js  auto_update_reference_for_qt_widgets.js  error_qtada_syntax.js
tmp/: materials_for_future.txt
tools/: compare_without_numbers.py  get_os_info.sh  get_packet_cmd.sh
